testsuite/tests/package/package01e.stderr

package01e.hs:2:1: error: [GHC-87110]
    Could not load module ‘Data.Map’.
    It is a member of the hidden package ‘containers-0.6.7’.
    Use -v to see a list of the files searched for.

package01e.hs:3:1: error: [GHC-87110]
    Could not load module ‘Data.IntMap’.
    It is a member of the hidden package ‘containers-0.6.7’.
    Use -v to see a list of the files searched for.
