testsuite/tests/package/package01e.hs
module Package01e where
import Data.Map
import Data.IntMap
